--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Lemuel Canady, Jr",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "mu-manager": "github:lcanady/mu-manager"
   },
   "devDependencies": {
     "chai": "^4.2.0",
