--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muqueue",
+  "name": "mu-queue",
   "version": "0.2.0",
   "description": "A simple event driven, managed queue system.",
   "main": "index.js",
