--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "mu-manager": "github:lcanady/mu-manager"
+    "mu-manager": "^0.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
